--- a/assets/css/admindashboard.css
+++ b/assets/css/admindashboard.css
@@ -10,7 +10,7 @@
 .sidebar{
     display: grid;
     grid-template-columns: 2fr 7fr;
-    grid-template-rows: 102vh;
+    grid-template-rows: 99vh;
     grid-gap: 30px;
    
 }
@@ -18,22 +18,22 @@
     background-color: rgba(32,56,120,255);
     position: relative;
     left: 10px;
-    border-radius: 50px;
-  margin: 12px 10px;
+    border-radius: 10px;
+  margin: 10px 10px;
   /* position: static; */
 }
 .sidebar2{
     background-color: rgba(241, 251, 255, 255);
     position: relative;
-    height: 130vh;
+    height: 90vh;
     right: 5px;
-    border-radius: 50px;
+    border-radius: 10px;
   margin: 30px 0px;
 }
 .profileimg{
     width: 130px;
     height: 130px;
-    padding: 33px 30px;
+    padding: 37px 30px;
     border-radius: 50px;
 }
 .nameperson{
@@ -43,8 +43,8 @@
 }
 .name-rankdisplay{
     position: relative;
-    left: 180px;
-    bottom: 110px;
+    left: 50px;
+    bottom: 30px;
 }
 .rankdisplay{
     display: flex;
@@ -59,11 +59,12 @@ top: 30px;
     width: 130px;
     height: 30px;
     position: relative;
-    left: 80px;
-    bottom: 30px;
-    background: #0fa30c;
+    left: 38px;
+    bottom: 10px;
+    background: #b9c1d6;
     border: none;
   box-shadow: inset;
+  border-radius: 7px;
     
 }
 .fillbutton{
@@ -90,7 +91,7 @@ top: 30px;
 }
 .dashboard,.message,.bookinghistory,.analytics{
     font-size: 20px;
-  padding: 32px 20px;
+  padding: 52px 20px;
   color: #fff;
 }
 
@@ -112,7 +113,7 @@ top: 30px;
     padding: 2px 2px;
     padding-right: 20px;
     position: relative;
-    top: 43px;
+  top: 290px;
     width: 110px;
     height: 30px;
     position: relative;
@@ -174,10 +175,11 @@ input[disabled] {
 
     position: relative;
     right: 120px;
-    top: 43px;
+    top: 3px;
     /* bottom: 70px; */
-    height: 700px;
+    height:730px;
     overflow-y: scroll;
+    overflow-x: hidden;
 
 
 }
@@ -222,8 +224,8 @@ form input {
     position: relative;
   top: 5px;
     border: 2px solid rgb(180, 176, 176);
-    width: 650px;
-    left: 25%;
+    width: 850px;
+    left: 15%;
     border-radius: 2%;
     box-shadow: 0 10px 10px rgba(215, 211, 211, 0.230);
     height: 790px;
@@ -231,7 +233,7 @@ form input {
 
 }
 
-#name1 {
+#name1,#name2 {
     width: 50%;
     height: 35px;
     border-radius: 5px;
@@ -338,11 +340,16 @@ form input {
     border: none;
     margin-bottom: 5px;
     position: relative;
-    background-color: rgba(12, 175, 23, 0.783);
+    background-color: rgba(4, 133, 49, 0.813);
     margin-left: 10px;
     /* left: 163px; */
     box-shadow: 0 3px 10px rgb(3, 10, 87);
+    border-radius: 7px;
 
+}
+
+.profile2:hover{
+    background-color: rgba(64, 143, 91, 0.813);
 }
 #checkjoinplayer1{
     font-size: 10px;
@@ -411,6 +418,11 @@ font-size: 20px;
     position: relative;
     right: 90px;
 } */
+
+.labelname{
+    color: white;
+    font-size: larger;
+}
 textarea{
    resize: none; 
 }
@@ -664,7 +676,7 @@ color: black;
   padding: 9px 2px;
   padding-right: 20px;
   position: relative;
-  top: 89px;
+  top: 239px;
   width: 110px;
   height: 37px;
   position: relative;
@@ -690,8 +702,8 @@ color: black;
     background-color: rgba(241, 251, 255, 255);
   color: #000000;
   border-radius: 10px;
-  margin: 0px 0px;
-  height: 10px;
+  /* margin: 0px 0px;
+  height: 10px; */
   /* width: 260px; */
   /* height: 0px; */
 }
@@ -702,8 +714,8 @@ color: black;
     background-color: rgba(241, 251, 255, 255);
   color: #000000;
   border-radius: 10px;
-  margin: 0px 0px;
-  height: 10px;
+  /* margin: 0px 0px;
+  height: 10px; */
 
   /* width: 260px; */
   /* height: 10px; */
@@ -714,8 +726,8 @@ color: black;
     background-color: rgba(241, 251, 255, 255);
   color: #000000;
   border-radius: 10px;
-  margin: 0px 3px;
-  height: 10px;
+  /* margin: 0px 3px;
+  height: 10px; */
   /* width: 260px; */
   /* height: 10px; */
 }
@@ -727,8 +739,8 @@ color: black;
     background-color: rgba(241, 251, 255, 255);
   color: #000000;
   border-radius: 10px;
-  margin: 0px 3px;
-  height: 10px;
+  /* margin: 0px 3px;
+  height: 10px; */
   /* width: 260px; */
   /* height: 10px; */
 }
