--- a/assets/css/friendlist.css
+++ b/assets/css/friendlist.css
@@ -201,6 +201,50 @@ input[type="search"]::placeholder{
     left: 170px;
     bottom: 62px;
 }
+
+
+
+.h5tag{
+    position: relative;
+    top: 290px;
+width: 200px;
+    /* top: 50%; */
+    left: 700px;
+    transform: translate(-50%,-50%);
+    padding: 110px;
+    border-radius: 10px;
+    background-color: white;
+    border: 1px solid black;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+
+.btnok{
+    flex-direction: column;
+    align-items: center;
+    padding: 6px 14px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
+    border-radius: 6px;
+    color: #3D3D3D;
+    background: #fff;
+    border: none;
+    box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  border: 2px solid black;
+    font-size: 15px;
+    padding: 9px 2px;
+    padding-right: 20px;
+    position: relative;
+    top: 59px;
+    width: 110px;
+    height: 37px;
+    position: relative;
+    left: 0px;
+    cursor: pointer;
+}
+
  /*search bar  */
 
 .userprofile{
