--- a/assets/css/groundbookingadmin.css
+++ b/assets/css/groundbookingadmin.css
@@ -119,19 +119,30 @@ max-height: fit-content;
     grid-template-columns: 2fr 2fr;
     grid-template-rows: 12vh;
     grid-gap: 50px;
-    width: 65%;
-    height: 480px;
+    width: 69%;
+    height: 690px;
     background-color: rgba(32,56,120,255);
     border-radius: 5px;
 }
 
-.box1,.box2,.box3,.box4,.box5,.box6,.box7,.box8,.box9{
-    width: 200px;
-    height: 380px;
+.box1,.box2,.box4,.box5,.box6,.box7,.box8,.box9{
+    /* width: 200px;
+    height: 380px; */
     background-color: #ffffff;
     color: rgb(0, 0, 0);
     text-align: center;
     border-radius: 10px;
+    padding:7px 8px;
+}
+.box3{
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    border-radius: 10px;
+  
+    width: 250px;
+    height: 100px;
+
 }
 .acceptbtn{
     width: 70px;
@@ -146,25 +157,25 @@ max-height: fit-content;
     height: 20px;
     position: relative;
     left: 50px;
-    top: 290px;
+    top: 390px;
 }
 .column1{
    padding: 10px;
 display: flex;
 flex-direction: column;
-gap: 28px;
+gap: 45px;
 color: #ffffff;
 }
 .column2{
     width: 190px;
     height: 392px;
-    padding: 10px;
+    padding: 30px 20px;
  display: flex;
  flex-direction: column;
- gap: 24px;
+ gap: 22px;
  
  position: relative;
- right: 20px;
+ left:  90px;
  }
 
 
@@ -251,3 +262,47 @@ a {
     text-decoration: none;
 }
 
+
+
+
+.h5tag{
+    position: relative;
+    top: 90px;
+width: 200px;
+color: #000;
+    /* top: 50%; */
+    left: 700px;
+    transform: translate(-50%,-50%);
+    padding: 110px;
+    border-radius: 10px;
+    background-color: white;
+    border: 1px solid black;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+
+.btnok{
+    flex-direction: column;
+    align-items: center;
+    padding: 6px 14px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
+    border-radius: 6px;
+    color: #3D3D3D;
+    background: #fff;
+    border: none;
+    box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  border: 2px solid black;
+    font-size: 15px;
+    padding: 9px 2px;
+    padding-right: 20px;
+    position: relative;
+    top: 59px;
+    width: 110px;
+    height: 37px;
+    position: relative;
+    left: 0px;
+    cursor: pointer;
+}
