--- a/assets/css/myground.css
+++ b/assets/css/myground.css
@@ -3,19 +3,19 @@
 
 body{
     overflow-x: hidden;
-    background-color: rgba(32,56,120,255);
+    background-color: rgba(241, 251, 255, 255);
 }
 .formcontainer{
    
     position: relative;
-
-    width: 970px;
+    background-color: rgba(241, 251, 255, 255);
+    width: 1200px;
     top: 50%;
-    left: 242px; 
+    left: 122px; 
     /* transform: translate(-50%,-50%); */
     padding: 30px 43px;
     border-radius: 5%;
-    background-color: white;
+    /* background-color: white; */
     border: 1px solid black;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
@@ -41,6 +41,8 @@ body{
 
 textarea{
     resize: none; 
+    width: 300px;
+    height: 200px;
  }
 input{
     width: 200px;
@@ -58,7 +60,7 @@ top: 70px;
     width: 350px;
     height: 50px;
     position: relative;
-    left: 250px;
+    left: 230px;
 top: 90px;
    
 
@@ -105,7 +107,7 @@ top: 60px;
 .groundlocationbox{
     /* display: flex; */
     position: relative;
-    left: 250px;
+    left: 380px;
     
   
 
@@ -133,8 +135,8 @@ top: 60px;
     top: 120px;
 }
 #sportsvalue{
-    width: 120px;
-    height: 30px;
+    width: 220px;
+    height: 50px;
     text-align: center;
     position: relative;
     left: 832px;
@@ -155,7 +157,11 @@ top: 60px;
 .groundcourt{
     position: relative;
     left: 790px;
-    bottom: 130px;
+    bottom: 180px;
+}
+.groundprice1{
+    position: relative;
+    bottom: 70px;
 }
 #sportscourts{
     width: 120px;
@@ -165,7 +171,7 @@ top: 60px;
 }
 .groundprice2{
     position: relative;
-    left: 390px;
+    left: 0px;
     bottom: 0px;
 }
 #increaseamount{
@@ -184,9 +190,9 @@ top: 60px;
 }
 .groundtiming{
     position: relative;
-    left: 707px;
+    left:397px;
     width: 270px;
-    top: 50px;
+    /* bottom:50px; */
     text-align: center;
     /* bottom: 130px; */
   
@@ -195,8 +201,9 @@ top: 60px;
 }
 .groundrules{
     position: relative;
-    left: 490px;
-    bottom: 227px;
+    /* width: 100px; */
+    left: 870px;
+    bottom: 160px;
 
   
 
@@ -210,11 +217,13 @@ top: 60px;
 
 
 } */
-/* .values{
- 
+.values{
+ position: relative;
+ top: 20px;
+ /* left: 120px; */
   
 
-} */
+}
 #submitbtn{
     position: relative;
     top: 10px;
@@ -227,6 +236,13 @@ top: 60px;
     position: relative;
     left: 360px;
     padding: 10px;
+    top: 20px;
+
+}
+#editbtn{
+    position: relative;
+    left: 360px;
+    padding: 10px 20px;
     top: 20px;
 
 }
@@ -263,10 +279,13 @@ top: 60px;
 }
 
 .backbtn{
-    background-color: aliceblue;
+    background-color: rgb(255, 255, 255);
     width: 90px;
-    
+    padding: 3px 10px;
     position: relative;
     top: 30px;
     left: 30px;
+    border-radius: 10px;
+    cursor: pointer;
 }
+
