--- a/assets/css/newprofile.css
+++ b/assets/css/newprofile.css
@@ -49,8 +49,8 @@
 }
 .name-rankdisplay{
     position: relative;
-    left: 180px;
-    bottom: 110px;
+    left: 50px;
+    bottom: 20px;
     color: #fff;
 }
 .rankdisplay{
@@ -68,8 +68,8 @@ top: 30px;
     /* height: 55px; */
     position: relative;
     left: 30px;
-    bottom: 30px;
-    background: #0fa30c;
+    bottom: 10px;
+    background: #b9c1d6;
     padding: 5px 10px;
     border: none;
   box-shadow: inset;
@@ -132,11 +132,12 @@ top: 30px;
     top: 20px;
     color: #fff;
 }
-.friendslist span,.friendsrequest span{
+.friendslist span,.friendsrequest span,.homepage span{
     position: relative;
     left: 20px;
 
 }
+
 
 .bxs-plus-circle{
     position: relative;
@@ -182,11 +183,12 @@ input[disabled] {
 
     position: relative;
     right: 120px;
-    top: 43px;
+    top: 3px;
     /* bottom: 70px; */
    
-    height: 700px;
+    height: 830px;
     overflow-y: scroll;
+    overflow-x: hidden;
 
 
 }
@@ -233,8 +235,8 @@ form input {
     position: relative;
   top: 5px;
     border: 2px solid rgb(180, 176, 176);
-    width: 660px;
-    left: 30%;
+    width: 900px;
+    left: 20%;
     border-radius: 10px;
     box-shadow: 0 10px 10px rgba(215, 211, 211, 0.230);
     height: 174vh;
@@ -379,10 +381,14 @@ form input {
     border: none;
     margin-bottom: 5px;
     position: relative;
-    background: #0fa30c;
+    /* background: #9c9a9a; */
+    background-color: rgba(4, 133, 49, 0.813);
     font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
     box-shadow: 0 3px 10px rgb(3, 10, 87);
 
+}
+.profile2:hover{
+    background-color: rgba(64, 143, 91, 0.813);
 }
 .pjointext{
     position: relative;
@@ -424,8 +430,8 @@ bottom: 17px;
 }
 .textabout{
     resize: none;
-    width: 200px;
-    height: 120px;
+    width: 300px;
+    height: 170px;
     position: relative;
 }
 .linetext{
@@ -557,7 +563,7 @@ bottom: 17px;
   padding: 9px 2px;
   padding-right: 20px;
   position: relative;
-  top: 89px;
+  top: 159px;
   width: 110px;
   height: 37px;
   position: relative;
@@ -583,8 +589,9 @@ bottom: 17px;
     background-color: rgba(241, 251, 255, 255);
   color: #000000;
   border-radius: 10px;
+  /* border-radius: 10px;
   margin: 0px 0px;
-  height: 10px;
+  height: 10px; */
   /* width: 260px; */
   /* height: 0px; */
 }
@@ -595,8 +602,9 @@ bottom: 17px;
     background-color: rgba(241, 251, 255, 255);
   color: #000000;
   border-radius: 10px;
+  /* border-radius: 10px;
   margin: 0px 0px;
-  height: 10px;
+  height: 10px; */
 
   /* width: 260px; */
   /* height: 10px; */
@@ -607,8 +615,9 @@ bottom: 17px;
     background-color: rgba(241, 251, 255, 255);
   color: #000000;
   border-radius: 10px;
+  /* border-radius: 10px;
   margin: 0px 3px;
-  height: 10px;
+  height: 10px; */
   /* width: 260px; */
   /* height: 10px; */
 }
@@ -620,12 +629,30 @@ bottom: 17px;
     background-color: rgba(241, 251, 255, 255);
   color: #000000;
   border-radius: 10px;
-  margin: 0px 3px;
-  height: 10px;
+  /* margin: 0px 3px;
+  height: 10px; */
   /* width: 260px; */
   /* height: 10px; */
 }
 
+
+
+.homepage{
+    font-size: 20px;
+    padding: 30px 30px;
+    position: relative;
+    top: 0px;
+    color: #fff;
+  
+}
+.homepage:hover,
+.homepage:focus
+{
+        background-color: rgba(241, 251, 255, 255);
+      color: #000000;
+      border-radius: 10px;
+
+}
  .fa-eye-slash,.fa-eye{
     position: relative;
     bottom: 30px;
