--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -591,7 +591,7 @@ ul li a:hover {
   .reviewword {
       font-size: 10px;
       position: relative;
-      bottom: 4px;
+      top: 10px;
       line-height: 2;
       
   }
