--- a/assets/css/admindashboard.css
+++ b/assets/css/admindashboard.css
@@ -30,6 +30,7 @@
     border-radius: 10px;
   margin: 30px 0px;
 }
+
 .profileimg{
     width: 130px;
     height: 130px;
@@ -72,8 +73,8 @@ top: 30px;
     width: 130px;
     height: 30px;
     position: relative;
-    right: 50px;
-    bottom: 5px;
+    left:  30px;
+    bottom: 25px;
     background-color: rgb(83, 146, 198);
     border: none;
   box-shadow: inset;
